<resources>
    <string name="app_name">Wyzwanie Less Waste</string>
    <string name="lekcja_5">Lekcja 5</string>
    <string name="lekcja_4">Lekcja 4</string>
    <string name="lekcja_3">Lekcja 3</string>
    <string name="lekcja_2">Lekcja 2</string>
    <string name="lekcja_1">Lekcja 1</string>
    <string name="lekcja_6">Lekcja 6</string>
    <string name="lekcja_7">Lekcja 7</string>
    <string name="lekcja_8">Lekcja 8</string>
    <string name="lekcja_9">Lekcja 9</string>
    <string name="lekcja_10">Lekcja 10</string>
    <string name="zasady_wyzwania">Zasady wyzwania</string>
    <string name="rozpocznij_wyzwanie">Rozpocznij wyzwanie</string>
    <string name="todo">TODO</string>
    <string name="my_progress">My progress</string>
    <string name="wyzwanie_10">Wyzwanie 10</string>
    <string name="wyzwanie_9">Wyzwanie 9</string>
    <string name="wyzwanie_8">Wyzwanie 8</string>
    <string name="wyzwanie_7">Wyzwanie 7</string>
    <string name="wyzwanie_6">Wyzwanie 6</string>
    <string name="wyzwanie_5">Wyzwanie 5</string>
    <string name="wyzwanie_4">Wyzwanie 4</string>
    <string name="wyzwanie_3">Wyzwanie 3</string>
    <string name="wyzwanie_2">Wyzwanie 2</string>
    <string name="wyzwanie_1">Wyzwanie 1</string>

    <string-array name="cities">
        <item></item>
        <item>Kraków</item>
        <item>Warszawa</item>
        <item>Szczecin</item>
        <item>Rzeszów</item>
        <item>Gdańsk</item>
        <item>Lublin</item>
        <item>Poznań</item>
        <item>Sopot</item>
    </string-array>
    <string name="title_activity_maps_szczecin">Map</string>


</resources>